--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 运行环境python版本最好是3.8以上
-```python
-pip install -r requirements.txt
-python roll.py
-```
+.. code-block:: python
+
+    pip install -r requirements.txt
+    python roll.py
+
 请查看https://zhuanlan.zhihu.com/p/373853789
